--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>PC 2.0 Starter Template</title>
+    <meta name="description" content="Build modern podcast applications with Podcasting 2.0 features like Value4Value, chapters, transcripts, and more." />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="PC 2.0 Starter Template" />
+    <meta property="og:description" content="Build modern podcast applications with Podcasting 2.0 features like Value4Value, chapters, transcripts, and more." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="content-security-policy" content="default-src 'none'; script-src 'self'; style-src 'self' 'unsafe-inline'; frame-src 'self' https:; font-src 'self'; base-uri 'self'; manifest-src 'self'; connect-src 'self' blob: https: wss:; img-src 'self' data: blob: https:; media-src 'self' https:">
     <link rel="manifest" href="/manifest.webmanifest">
